master
  - [API] allow to authorize using private token in HTTP header
  - [API] add user creation

v 2.9.1
  - Fixed resque custom config init

v 2.9.0
  - fixed inline notes bugs
  - refactored rspecs
  - refactored gitolite backend
  - added factory_girl
  - restyled projects list on dashboard
  - ssh keys validation to prevent gitolite crash
  - send notifications if changed premission in project
  - scss refactoring. gitlab_bootstrap/ dir
  - fix git push http body bigger than 112k problem
  - list of labels  page under issues tab
  - API for milestones, keys
  - restyled buttons
  - OAuth
  - Comment order changed

v 2.8.1
  - ability to disable gravatars
  - improved MR diff logic
  - ssh key help page

v 2.8.0
  - Gitlab Flavored Markdown
  - Bulk issues update
  - Issues API
  - Cucumber coverage increased
  - Post-receive files fixed
  - UI improved
  - Application cleanup
  - more cucumber
  - capybara-webkit + headless

v 2.7.0
  - Issue Labels
  - Inline diff
  - Git HTTP
  - API
  - UI improved
  - System hooks
  - UI improved
  - Dashboard events endless scroll
  - Source perfomance increased

v 2.6.0
  - UI polished
  - Improved network graph + keyboard nav
  - Handle huge commits
  - Last Push widget
  - Bugfix
  - Better perfomance
  - Email in resque
  - Increased test coverage
  - Ability to remove branch with MR accept
  - a lot of code refactored

v 2.5.0
  - UI polished
  - Git blame for file
  - Bugfix
  - Email in resque
  - Better test coverage

v 2.4.0
  - Admin area stats page
  - Ability to block user
  - Simplified dashboard area
  - Improved admin area
  - Bootstrap 2.0
  - Responsive layout
  - Big commits handling
  - Perfomance improved
  - Milestones

v 2.3.1
  - Issues pagination
  - ssl fixes
  - Merge Request pagination

v 2.3.0
  - Dashboard r1
  - Search r1
  - Project page
  - Close merge request on push
  - Persist MR diff after merge
  - mysql support
  - Documentation

v 2.2.0
  - We’ve added support of LDAP auth