@@ -228,6 +228,16 @@ module Gitlab
         present CommitDecorator.decorate(commits), with: Entities::RepoCommit
       end
 
+      # Get a project snippets
+      #
+      # Parameters:
+      #   id (required) - The ID or code name of a project
+      # Example Request:
+      #   GET /projects/:id/snippets
+      get ":id/snippets" do
+        present paginate(user_project.snippets), with: Entities::ProjectSnippet
+      end
+
       # Get a project snippet
       #
       # Parameters:
